fixed hamburger menu. z-index issue

--- a/style.css
+++ b/style.css
@@ -31,8 +31,35 @@ body {
 .navbar {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font-family: "Raleway", sans-serif;
   padding: 73px 80px;
+  position: relative;
+}
+
+.hamburger {
+  display: none;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 25px;
+  height: 25px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  position: absolute;
+  left: 90%;
+}
+
+.hamburger span {
+  width: 100%;
+  height: 2px;
+  background-color: var(--white);
+  transition: 0.3s;
+}
+
+.menu {
+  display: flex;
 }
 
 .navbar ul {
@@ -64,8 +91,50 @@ li + li {
   }
 }
 
-@media screen and (max-width: 460px) {
+@media screen and (max-width: 860px) {
   .navbar ul {
+    /* display: none; */
+  }
+
+  .hamburger {
+    display: flex;
+  }
+
+  .menu {
     display: none;
+    flex-direction: column;
+
+    background-color: var(--db-intro);
+    position: absolute;
+    top: 70px;
+    right: 0;
+    width: 100%;
+    text-align: center;
+    z-index: 1000;
+  }
+
+  li a {
+    font-size: 3rem;
+  }
+
+  .menu.active {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+
+  .menu ul {
+    flex-direction: column;
+    padding: 0;
+  }
+
+  .menu ul li {
+    margin: 16px 0;
+  }
+
+  .navbar img {
+    width: 80px;
+    height: 24px;
   }
 }
